# UniteChan

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.bat
data/: pokemon_list.yaml
src/: test_patch.py
src/unitechan/app/: bot.py
src/unitechan/app/cogs/: _utils.py  ban_commands.py  config_commands.py  gui_mode.py  lobby.py  result_commands.py  separate_commands.py  team_split.py
src/unitechan/core/: config_store.py  lobby_store.py  paths.py  split_mode.py  split_service.py  stats_store.py
tests/: test_gui_mode.py  test_stats_store.py
tools/: apply_patch.py
