[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unitechan"
version = "0.2.5"
description = "Pokemon Unite Team Splitting Bot"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0,<3.0.0",
    "python-dotenv",
    "PyYAML",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
unitechan = ["data/*.yaml"]
